--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,4 @@
 TODO: лифт с этажа на этаж перемещается за некоторое время (учитывать это)
 TODO: в зависимости от того на каком этаже находится лифт, время передвижения до следующего этажа будет разным
 TODO: исключения обрабатывать (например, кнопка нужного этажа уже нажата)
+TODO: учитывать направление движения лифта
