--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,11 @@
-TODO: лифт с этажа на этаж перемещается за некоторое время (учитывать это)
-TODO: в зависимости от того на каком этаже находится лифт, время передвижения до следующего этажа будет разным
 TODO: исключения обрабатывать (например, кнопка нужного этажа уже нажата)
-TODO: учитывать направление движения лифта
+TODO: исключения обрабатывать (например, нельзя поехать ниже начальноого этажа и выше конечного этажа)
+TODO: исключения обрабатывать (например, лифт сломан)
+TODO: исключения обрабатывать (например, лифт сломался во время движения, необходимо включить стоппоры)
+
+TODO: в зависимости от того на каком этаже находится лифт, время передвижения до следующего этажа будет разным
+TODO: лифт с этажа на этаж перемещается за некоторое время (учитывать это)
+
+TODO: учитывать состояние дверей лифта (открыты, закрыты) и открываются или закрываются они
+TODO: учитывать выбор пользователя по открытию и закрытию дверей лифта
+TODO: учитывать, что лифт может останавливаться на промежуточных этажах, если там он был вызван, при этом, должны останавливаться только те лифты, направление которых соответствует требуемому направлению пользователя. (тут уже создать отдельный класс здания)
